Fix environment z-index and tweak appearance
Avoid appearing underneath task stats progress bars/meters.

--- a/app/files/css/environment.css
+++ b/app/files/css/environment.css
@@ -39,11 +39,14 @@
 
 .environment .keypairs {
   background-color: #1d1d1d;
-  padding: 1em;
+  padding: 1.2em;
   margin-left: 1em;
   display: block;
   min-width: 60%;
   font-size: 0.8em;
   position: absolute;
-  border: 1px solid rgba(240,240,240,0.3);
+  border: 2px solid rgba(240,240,240,0.4);
+  z-index: 9999;
+  box-shadow: 0px 0px 5px #555;
+  line-height: 1.4em;
 }
